fix contrast on button

--- a/public/css/styles1.css
+++ b/public/css/styles1.css
@@ -119,7 +119,7 @@ nav a:hover {
 
 /* Button */
 .button-blue {
-  background-color:  #416fb4;
+  background-color: #789BCE;
   color: black;
   border: none;
   border-radius: 0.3rem;
